# openclaw-companion

./: README.md  SPEC.md  index.html  package-lock.json  package.json
.codebuddy/memory/: 2026-03-12.md
public/models/: README.md  hexo_live2d.js  loadModel.js
public/models/miku/: loadModel.js
public/models/miku/assets/xuefeng_3/: xuefeng_3.model3.json
public/models/miku/framework/: live2dcubismframework.js
public/models/miku/waifu/: waifu-tips.js  waifu-tips.json  waifu.css
server/: index.js  package-lock.json  package.json  proxy.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChatInput.css  ChatInput.tsx  ChatMessages.css  ChatMessages.tsx  Live2DViewer.css  Live2DViewer.tsx  SettingsPanel.css  SettingsPanel.tsx  SetupWizard.css  SetupWizard.tsx
src/services/: eventBridge.ts  websocket.ts
src/stores/: appStore.ts
src/types/: index.ts
src/views/: ChatView.css  ChatView.tsx  MascotView.css  MascotView.tsx
