[package]
name = "madoka"
version = "0.2.0"
description = "Madoka - Desktop Companion"
authors = ["you"]
edition = "2021"

[lib]
name = "madoka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
